logs/server.log
file:///www/wwwroot/ai-work/server/auth.js:310
export { getAuditLogById, getAuditLogStatistics } from './database.js'
         ^^^^^^^^^^^^^^^
SyntaxError: The requested module './database.js' does not provide an export named 'getAuditLogById'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async node:internal/modules/esm/loader:639:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.8.0
